--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,20 @@
-notebook
-numpy
-pandas
-opencv-python
+fairlearn
+imbalanced_learn
 keras
-pillow
-pydicom
-pywavelets
-ipywidgets
-scikit-image
-scikit-learn
+lime
+matplotlib
+numpy
+opencv_python
+pandas
+precision_medicine_toolbox
+reportlab
+scikit_fuzzy
+scikit_learn
 scipy
-seaborn
-setuptools
-simpleitk
-statannot
+SimpleITK
+SimpleITK
+scikit-image
 statsmodels
 tensorflow
+tensorflow_intel
 tqdm
-xlrd
-openpyxl
-statannot
-shap  # Not used as of now
-matplotlib
-lime
-reportlab
-scikit-fuzzy
-precision-medicine-toolbox
-fairlearn
-imbalanced-learn
-requests
