--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
 fairlearn
-imbalanced_learn
+imbalanced_learn==0.12.4
 keras
-lime
-matplotlib
+lime==0.2.0.1
+matplotlib==3.7.5
 numpy
-opencv_python
-pandas
-reportlab
-scikit_fuzzy
-scikit_learn
+opencv_python==4.11.0.86
+pandas==2.0.3
+plotly==6.0.0
+pydicom
+pyradiomics==3.1.0
+reportlab==4.3.0
+scikit_fuzzy==0.5.0
+scikit_learn==1.3.2
 scipy
-SimpleITK
-SimpleITK
+seaborn==0.13.2
+SimpleITK==2.4.1
+SimpleITK==2.4.1
 scikit-image
-statsmodels
-tensorflow
-tensorflow_intel
-tqdm
+statsmodels==0.14.1
+tensorflow==2.10.0
+tqdm==4.67.1
