--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,15 @@ matplotlib==3.7.5
 numpy
 opencv_python==4.11.0.86
 pandas==2.0.3
+Pillow
 plotly==6.0.0
 pydicom
 pyradiomics==3.1.0
 reportlab==4.3.0
-scikit_fuzzy==0.5.0
-scikit_learn==1.3.2
+scikit-fuzzy==0.5.0
+scikit-learn
 scipy
 seaborn==0.13.2
-SimpleITK==2.4.1
 SimpleITK==2.4.1
 scikit-image
 statsmodels==0.14.1
