--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,19 @@
-fairlearn
-imbalanced_learn==0.12.4
-keras
+keras==2.10.0
+kfp==2.5.0
+kfp-pipeline-spec==0.2.2
 matplotlib==3.7.5
-numpy
-opencv_python==4.11.0.86
+numpy==1.24.3
+opencv-python==4.11.0.86
 pandas==2.0.3
-Pillow
 plotly==6.0.0
 pydicom
 pyradiomics==3.1.0
-reportlab==4.3.0
 scikit-fuzzy==0.5.0
-scikit-learn
+scikit-learn==1.3.2
 scipy
 seaborn==0.13.2
 SimpleITK==2.4.1
-scikit-image
 statsmodels==0.14.1
 tensorflow==2.10.0
-protobuf<3.20
 tqdm==4.67.1
+protobuf<3.20
