--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
+converted_nrrds/LUNG1-001_1-1/ filter=lfs diff=lfs merge=lfs -text
+model_files/weights_v7.hdf5 filter=lfs diff=lfs merge=lfs -text
 *.hdf5 filter=lfs diff=lfs merge=lfs -text
