--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ pydicom
 pyradiomics==3.1.0
 scikit-fuzzy==0.5.0
 scikit-learn==1.3.2
+scikit-image
 scipy
 seaborn==0.13.2
 SimpleITK==2.4.1
@@ -17,3 +18,4 @@ statsmodels==0.14.1
 tensorflow==2.10.0
 tqdm==4.67.1
 protobuf<3.20
+networkx
